Updated to JwIUtils 4